--- a/_includes/before.html
+++ b/_includes/before.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <a href="/"><img id="logo" alt="logo" src="/logo.svg"></a>
+      <a href="/"><img id="logo" alt="icepick" src="/icepick.svg"></a>
       <h1>{{site.title}}</h1>
       <p class="description">{{site.description}}</p>
     </header>
